--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - export CXX=g++-5
 
 script:
-  - $CXX -std=c++11 -o size size.cpp
+  - $CXX -march=native -std=c++11 -o size size.cpp
   - ./size
 #  - $CXX -m32 -std=c++11 -o size32 size.cpp
 #  - ./size32
