--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,5 +20,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: compile
       run: $(CC) -o size size.cpp
+      env:
+        CC: ${{ matrix.config.cc }}
     - name: run
       run: ./size
