Fix env variable

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,7 +19,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: compile
-      run: $(CC) -o size size.cpp
+      shell: bash
+      run: ${CC} -o size size.cpp
       env:
         CC: ${{ matrix.config.cc }}
     - name: run
