--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        compiler: [gcc, clang]
+        cc: [gcc, clang]
 
     runs-on: ${{ matrix.os }}
 
@@ -22,6 +22,6 @@ jobs:
       shell: bash
       run: ${CC} -o size size.cpp
       env:
-        CC: ${{ matrix.config.compiler }}
+        CC: ${{ matrix.cc }}
     - name: run
       run: ./size
